# AzureStreamlit

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
